# trade-blotter-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
agent/: pipeline_agent.py
agent/config/: agent_config.yaml
agent/tools/: file_monitor.py  file_uploader.py  job_monitor.py  job_trigger.py  quality_checker.py  reconciler.py  reporter.py
config/: pipeline.yaml
data/bronze/: trades_20260401.csv
notebooks/: trade_blotter_databricks.py
scripts/: run_pipeline.py
src/trade_blotter/: pipeline.py
src/trade_blotter/bronze/: loader.py
src/trade_blotter/gold/: excel_writer.py  pnl.py  positions.py  writer.py
src/trade_blotter/ingest/: loader.py
src/trade_blotter/models/: trade.py
src/trade_blotter/silver/: cleaner.py  validator.py  writer.py
src/trade_blotter/store/: writer.py
src/trade_blotter/transform/: transformer.py
src/trade_blotter/utils/: logger.py
src/trade_blotter/validate/: validator.py
tests/: test_pipeline.py
tests/agent/: test_file_monitor.py  test_file_uploader.py
tests/bronze/: test_loader.py
tests/gold/: test_excel_writer.py  test_pnl.py  test_positions.py  test_writer.py
tests/silver/: test_cleaner.py  test_validator.py  test_writer.py
