[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-blotter-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "sqlalchemy",
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
